# SandBox

./: .gitignore  README.md
.github/workflows/: ci.yml
DeliveryManager.Api/DeliveryManager.API/: DeliveryManager.API.sln
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.API/: DeliveryManager.API.csproj  Program.cs  Startup.cs
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.API/Controllers/: TestController.cs
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.API/Properties/: launchSettings.json
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.API/Properties/ServiceDependencies/DeliveryManager - Web Deploy/: profile.arm.json
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.Dacpac/: DeliveryManager.Dacpac.sqlproj
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.Dacpac/dbo/Tables/: Customer.sql
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.Models/: DeliveryManager.Models.csproj
DeliveryManager.Api/DeliveryManager.API/DeliveryManager.Models/Model/: Customer.cs
DeliveryManager.client/: CMakeLists.txt
DeliveryManager.client/inc/: curl_helper.hpp  dummy.hpp
DeliveryManager.client/src/: curl_helper.cpp  dummy.cpp  json_helper.cpp  main.cpp
DeliveryManager.client/tests/: dummy.ut.cpp
